fix & refactor : 회원가입 에러 수정 및 리팩토링 (#2)