@@ -8,6 +8,8 @@ import org.devridge.api.domain.member.dto.request.DeleteMemberRequest;
 import org.devridge.api.domain.member.entity.Member;
 import org.devridge.api.domain.member.repository.MemberRepository;
 import org.devridge.api.domain.skill.entity.MemberSkill;
+import org.devridge.api.domain.skill.entity.MemberSkillId;
+import org.devridge.api.domain.skill.entity.Skill;
 import org.devridge.api.domain.skill.repository.MemberSkillRepository;
 import org.devridge.api.domain.skill.repository.SkillRepository;
 import org.devridge.api.exception.member.DuplEmailException;
@@ -17,9 +19,10 @@ import org.devridge.api.security.constant.SecurityConstant;
 import org.devridge.api.util.SecurityContextHolderUtil;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
@@ -32,30 +35,38 @@ public class MemberService {
     private final PasswordChecker passwordChecker;
     private final BCryptPasswordEncoder passwordEncoder;
 
+    @Transactional
     public void createMember(CreateMemberRequest reqDto){
         checkDuplMember(reqDto);
         passwordChecker.checkWeakPassword(reqDto.getPassword());
         
-        if(!areSkillsValid(reqDto.getSkillSet())){
+        if(!areSkillsValid(reqDto.getSkills())){
             throw new SkillsNotValidException();
         }
 
         Member member = createNormalMember(reqDto);
-        Member savedMember = memberRepository.save(member);
-
-        createMemberSkill(reqDto, savedMember);
+        createMemberSkill(reqDto, member);
     }
 
-    private void createMemberSkill(CreateMemberRequest reqDto, Member member) {
-        Set<String> userSkills = new HashSet<>(Arrays.asList(reqDto.getSkillSet().split(",")));
+    @Transactional
+    public void createMemberSkill(CreateMemberRequest reqDto, Member member) {
+        Set<String> userSkills = new HashSet<>(List.of(reqDto.getSkills()));
+
+        for (String userSkill : userSkills) {
+            Optional<Skill> bySkill = skillRepository.findBySkill(userSkill);
+        }
 
         /**
          * 성능 최적화 하기!! (SQL query)
         * */
         for (String userSkill : userSkills) {
+            Skill skill = skillRepository.findBySkill(userSkill).get();
+            MemberSkillId memberSkillId = new MemberSkillId(member.getId(), skill.getId());
+
             MemberSkill memberSkill = MemberSkill.builder()
+                    .id(memberSkillId)
                     .member(member)
-                    .skill(skillRepository.findBySkill(userSkill).get())
+                    .skill(skill)
                     .build();
             memberSkillRepository.save(memberSkill);
         }
@@ -71,17 +82,18 @@ public class MemberService {
     }
 
     private Member createNormalMember(CreateMemberRequest reqDto) {
+        System.out.println("=== createNormalMember() = createMember() ");
         String encodedPassword = passwordEncoder.encode(reqDto.getPassword());
 
         Member member = Member.builder()
                 .email(reqDto.getEmail())
                 .password(encodedPassword)
                 .provider(MemberConstant.PROVIDER_NORMAL)
-                .roles(SecurityConstant.USER_ROLE)
+                .roles("ROLE_" + SecurityConstant.USER_ROLE)
                 .nickname(reqDto.getNickname())
                 .build();
 
-        return member;
+        return memberRepository.save(member);
     }
 
     public void deleteMember(DeleteMemberRequest reqDto) {
@@ -95,11 +107,11 @@ public class MemberService {
         }
     }
 
-    public boolean areSkillsValid(String userSkills) {
+    public boolean areSkillsValid(String[] skills) {
         Set<String> userSkillSet = new HashSet<>();
 
-        for (String skill : userSkills.split(",")) {
-            userSkillSet.add(skill.trim());
+        for (String skill : skills) {
+            userSkillSet.add(skill);
         }
 
         return SkillConstants.SKILL_SET.containsAll(userSkillSet);
